<resources>
    <string name="app_name">CosMoS</string>

    <!--    Strings for home page -->
    <string name="welcome">Welcome to CosMoS!</string>
    <string name="logout">Logout</string>
    <string name="latestAnnouncement">Latest Notifications ____________________</string>
    <string name="latestEvents">Latest Event ___________________________</string>

    <!--    Strings for announcements page-->
    <string name="notification_start">Welcome to notifications page</string>
    <string name="createAnnouncement">Create Announcement</string>
    <string name="choose_a_title">Choose a title:</string>
    <string name="title">Title...</string>
    <string name="choose_a_type">Choose a type:</string>
    <string-array name="notification_type_dropdown">
        <item>Announcement</item>
        <item>Event</item>
    </string-array>
    <string name="add_a_description">Add a description:</string>
    <string name="description">Description...</string>
    <string name="submit">Submit</string>

    <!--    Strings for event page-->
    <string name="events_start">Welcome to events page</string>
    <string name="feedback_button">Feedback</string>
    <string name="RSVP_button">RSVP</string>
    <string name="eventsDate">Date</string>
    <string name="eventsLocation">Location</string>
    <string name="eventsName">Name: (to be changed)</string>
    <string name="attendees">Attendees: </string>
    <string name="remaining">Seats Remaining: </string>
    <string name="eventsDescription">Description: </string>
    <string name="createEvent">Create Event</string>
    <string name="back_to_events">BACK TO EVENTS</string>
    <string name="feedbackAttendeesCount">Attendees: %d/%d</string>

    <!--    Strings for student feedback fragment-->
    <string name="feedback">Event Feedback</string>
    <string name="feedbackDescription">Thank you for choosing to provide feedback.\n
        Please enter a numeric feedback and provide a comment!</string>
    <string name="chooseRating">Rating (1–5): </string>
    <string-array name="numRatings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="enterFeedBack">Enter your comment below: </string>
    <string name="type">Type Here</string>
    <string name="cancel">Cancel</string>

    <!--    Strings for complaints page-->
    <string name="complaintForm">Complaint Form</string>
    <string name="enterTitle">Enter Title</string>
    <string name="enterDescription">Enter Description</string>

    <!--    Strings for "post" page-->
    <string name="enrolled_program_select">Select your program of enrollment:</string>
    <string name="desired_program_select">Select your desired program to make POSt:</string>
    <string-array name="enrolled_program_dropdown">
        <item>Computer Science</item>
        <item>Mathematics</item>
        <item>Statistics</item>
        <item>Other</item>
    </string-array>
    <string-array name="desired_program_dropdown">
        <item>Computer Science - Specialist or Major</item>
        <item>Mathematics - Specialist</item>
        <item>Mathematics - Major</item>
        <item>Statistics - Specialist</item>
        <item>Statistics - Major</item>
    </string-array>
    <string name="enter_grades">Please select your GPA for each course below:\n(Choose 0.0 if you have not taken or passed the course)</string>
    <string name="csca08">CSCA08</string>
    <string name="mata31">MATA31</string>
    <string name="csca67">CSCA67</string>
    <string name="csca48">CSCA48</string>
    <string name="mata37">MATA37</string>
    <string name="mata22">MATA22</string>
    <string-array name="gpa_dropdown">
        <item>0.0</item>
        <item>4.0</item>
        <item>3.7</item>
        <item>3.3</item>
        <item>3.0</item>
        <item>2.7</item>
        <item>2.3</item>
        <item>2.0</item>
        <item>1.7</item>
        <item>1.3</item>
        <item>1.0</item>
        <item>0.7</item>
    </string-array>
    <string name="get_result">Assess Eligibility</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>