<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".fragments.events.StudentEventsFragmentView"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground">
<!--        app:cardCornerRadius="3dp"-->
<!--        app:cardElevation="3dp"-->
<!--        app:cardUseCompatPadding="true">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvRemaining"
            app:layout_constraintTop_toBottomOf="@+id/tvRemaining">

            <TextView
                android:id="@+id/eventName"
                android:layout_width="227dp"
                android:layout_height="0dp"
                android:text="@string/eventsName"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="205dp" />

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventsDate"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="346dp" />

            <TextView
                android:id="@+id/eventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Location"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDate"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="346dp" />

            <TextView
                android:id="@+id/eventAttendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/attendees"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventName"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="346dp" />

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eventsDescription"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventAttendees"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="346dp" />

            <Button
                android:id="@+id/feedbackButton"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:text="@string/feedback_button"
                app:backgroundTint="@color/palatte_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDescription"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="165dp" />

            <Button
                android:id="@+id/rsvpButton"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:text="@string/RSVP_button"
                app:backgroundTint="@color/palatte_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDescription"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="165dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>